--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -12,29 +12,32 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 
-  body {
+  /* body {
     color:cornflowerblue;
     background: var(--background);
     font-family: Arial, Helvetica, sans-serif;
      margin-top:20px;
      background-color:#0a0a0a;
     
-  }
+  } */
 
-  #navbar{
-    display: flex;
-    justify-content: center;
+  h1 {
+    @apply text-4xl font-bold text-gray-900;
   }
   
-  .linkComp{
-    margin: auto;
+  h2 {
+    @apply text-3xl font-semibold text-gray-800;
+  }
+  
+  h3 {
+    @apply text-2xl font-medium text-gray-700;
   }
 
-@layer utilities {
+/* @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
